<resources>
    <string name="app_name">Calculator</string>
    <string name="nine">9</string>
    <string name="allclaear">AC</string>
    <string name="divide">÷</string>
    <string name="back">⌫</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="multi">×</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="dblzero">00</string>
    <string name="plusminus">+/-</string>
    <string name="ip">ip</string>
    <string name="op">op</string>
</resources>