<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/Workingtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text=""
            android:maxLines="2"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@id/Resulttv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <TextView
            android:id="@+id/Resulttv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:lines="1"
            android:maxLines="2"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout style="@style/buttonRow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AC"
            style="@style/button"
            android:text="@string/allclaear"
            android:onClick="allClearAction"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/backspace"
            style="@style/button"
            android:text="@string/back"
            android:textColor="@color/orange"
            android:onClick="allBAckAction"/>
        <Button
            android:id="@+id/sqrt"
            android:text="@string/plusminus"
            android:textColor="@color/orange"
            style="@style/extra" />
        <Button
            android:id="@+id/Divide"
            android:text="@string/divide"
            android:textColor="@color/orange"
            style="@style/buttonop" />


    </LinearLayout>
    <LinearLayout style="@style/buttonRow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nine"
            style="@style/button"
            android:text="@string/nine" />
        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            style="@style/button" />
        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            style="@style/button" />
        <Button
            android:id="@+id/multiply"
            android:text="@string/multi"
            android:textSize="40sp"
            android:textColor="@color/orange"
            style="@style/buttonop" />

    </LinearLayout>
    <LinearLayout style="@style/buttonRow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/six"
            style="@style/button"
            android:text="@string/six" />
        <Button
            android:id="@+id/five"
            android:text="@string/five"
            style="@style/button" />
        <Button
            android:id="@+id/four"
            android:text="@string/four"
            style="@style/button" />
        <Button
            android:id="@+id/add"
            android:text="@string/add"
            android:textColor="@color/orange"
            style="@style/buttonop" />


    </LinearLayout>
    <LinearLayout style="@style/buttonRow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/three"
            android:text="@string/three"
            style="@style/button" />
        <Button
            android:id="@+id/two"
            android:text="@string/two"
            style="@style/button" />
        <Button
            android:id="@+id/one"
            android:text="@string/one"
            style="@style/button" />
        <Button
            android:id="@+id/sub"
            android:text="@string/sub"
            android:textColor="@color/orange"
            android:textSize="40sp"
            style="@style/buttonop" />

    </LinearLayout>
    <LinearLayout style="@style/buttonRow"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            style="@style/button" />
        <Button
            android:id="@+id/dot"
            android:text="@string/dot"
            style="@style/button" />
        <Button
            android:id="@+id/equal"
            android:text="@string/equals"
            android:layout_weight="2"
            android:textSize="40sp"
            android:background="@color/orange"
            android:onClick="EqulasAction"
            style="@style/button" />

    </LinearLayout>


</LinearLayout>